[workspace]

members = ["taple-keygen", "taple-sign"]


[workspace.package]
version = "0.2.0-dev"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
edition = "2021"
description = "TAPLE Client official implementation"
documentation = "https://www.taple.es"                                     # Remove when crates.io is published
readme = "./README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-tools"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

[workspace.dependencies]
taple_core = { git = "https://github.com/opencanarias/taple-core", package = "core", tag = "v0.1.2" }
commons = { git = "https://github.com/opencanarias/taple-core", tag = "v0.1.2" }
clap = { version = "4.0.27", features = ["derive"] }
hex = "0.4.3"
libp2p = { version = "0.50.0", features = ["secp256k1"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
lto = true
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"

[profile.test]
debug = true

[profile.dev]
debug = true

[profile.doc]
debug-assertions = false
