[package]
name = "taple-keygen"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taple_core = { workspace = true }
commons = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
