[package]
name = "taple-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../../taple-core/commons" }
core = { path = "../../taple-core/core" }
hex = "0.4.3"
clap = { version = "4.0.27", features = ["derive"] }
serde_json = "1.0"
chrono={ version = "0.4", features = ["clock"]}
